Sliders mapping generation for bishops implemented in generators.h. TODO: remove edges from rook sliders.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ add_executable(KingOfTheHill_KI
         src/move.cpp
         src/move.h
         src/util.cpp
-        src/util.h src/moveMaps.h)
+        src/util.h src/moveMaps.h src/generators.h)
 target_link_libraries(KingOfTheHill_KI ${GTEST_LIBRARIES} pthread)
 
 add_executable(Tests
