Applied move sorting to white and alphaBetaHead as well. Cleaned up code. Changed estimated depth to always round down to previous even number. Changed time per move to sqrt based function instead of linear to increase emphasis on lower depth with little time.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ add_executable(KingOfTheHill_KI
         src/hikaru.h
         src/game.cpp
         src/game.h
+        src/scoredMove.cpp
+        src/scoredMove.h
         src/moveMaps.h
         src/pieceSquareTable.h
         src/transpositionTable.cpp
