Added copy constructor for t_game. Preliminary implementation of problem-specific trees in monteCarloTree.cpp and monteCarloTree.h.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ add_executable(KingOfTheHill_KI
         src/moveMaps.h
         src/pieceSquareTable.h
         src/transpositionTable.cpp
-        src/transpositionTable.h)
+        src/transpositionTable.h src/monteCarloTree.cpp src/monteCarloTree.h)
 target_link_libraries(KingOfTheHill_KI ${GTEST_LIBRARIES} pthread)
 
 add_executable(Tests
